
  What's new in this drop
  ================================================================================
  * Project references are maintained by the JavaCore, in parallel with build path.
  * Resurrected deprecated APIs from 0.9 which were discarded previously.
  
  PRs Fixed in this Release
  ================================================================================
  5430      Must resurrect 0.9 deprecated APIs   
  4923      IJavaProject.getPackageFragmentRoots returns roots from other projects
  3308      Projects not build in correct order after load (1GF60TN)
  3435      keeping the project references and required project in synch (1GL0L34) 
  5203      Project indexing does not restrain to source files on the classpath  
  3293      search does not work in inner class (1GEUQHJ)
  3249		Error message is confusing: using token instead of identifier (1GCTDYM) 
  5214      TVT: Apostrophe shows up multiple times in Java error messages in some translations (italian) 
  5263      TVT: Compiler error messages are hard for translators to understand
  3251      Types not included in code assist list for import (1GD06W9)
  5277      Code assist on assert method do an AbortException
  5070      search: missing interface method reference  
  5069      search: method reference in super missing  
  5068      search: missing method reference  

  PRs Closed in this Release
  ================================================================================
  5426      CodeAssist returns empty completion
  1690		Local variables not always displayed when in scope (1GJ8PX4)
  4368      Wrong match in Java Search  
  3238      CodeAssist - no completion if cursor at string beginning (1GI3BYO)
  3271      Unable to delete attached internal source jar (1GDX215)
  3209      DCR - JM -Invalid references to IPath.getDevice() potentially breaking on Linux (1G4U1R7)
                    

**********************************************************************************